Use single CMake file for such a simple proj

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,4 +17,11 @@ else()
 endif()
 
 add_subdirectory(${CMAKE_SOURCE_DIR}/ncl)
-add_subdirectory(${CMAKE_SOURCE_DIR}/src)
+add_executable(${EXENAME} ${CMAKE_SOURCE_DIR}/src/main.cpp)
+target_link_libraries(${EXENAME} ${PATH_LIB_NCL})
+if (MSVC)
+    target_link_libraries(${EXENAME} edit_static)
+    include_directories(${CMAKE_SOURCE_DIR}/../external/wineditline/include)
+else()
+    target_link_libraries(${EXENAME} ${PATH_LIB_EDIT})
+endif()
